04-networking/01-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-container-nodeport
spec:
  type: NodePort
  selector:
    app: multi-container-app
  ports:
  - name: nginx-nodeport
    protocol: TCP
    port: 9001
    targetPort: 80
    nodePort: 30081
  - name: multitool-nodeport
    protocol: TCP
    port: 9002
    targetPort: 8080
    nodePort: 30082
